Pilot response cd ..

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
+
+      <p>Pilot here, Control. Clear to buzz the tower?</p>
    </body>
 </html>
