--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
       <p>Radio check. Pilot, please confirm.</p>
 
       <p>Pilot here, Control. Clear to buzz the tower?</p>
+
+      <p>Air Boss Johnson: That's a negative Ghostrider, the pattern is full.</p>
    </body>
 </html>
